...
          const SizedBox(height: 12),
          _buildInfoValidacion(),

          const SizedBox(height: 24),

          CustomTextField(
            key: Key('txtNombreClase'),
            controller: txtNombre,
            label: 'Nombre de la clase',
            hint: 'Ej: Matemáticas Avanzadas (5-20 caracteres)',
            icon: Icons.school_rounded,
            validator: _validarNombre,
          ),

          const SizedBox(height: 16),

          CustomTextField(
            key: Key('txtTemaClase'),
            controller: txtTema,
            label: 'Tema',
            hint: 'Ej: Álgebra Lineal (5-20 caracteres)',
            icon: Icons.topic_rounded,
            validator: _validarTema,
          ),
...
