...

                _buildDecorativeLine(),
                const SizedBox(height: 32),

                Obx(
                  () => CreateButton(
                    key: Key('btnCrearClase'),
                    isLoading: controller.isLoading.value,
                    onPressed: () =>
                        controller.crearClase(user, token, _formKey),
                  ),
                ),

...
